--- a/entry/44.md
+++ b/entry/44.md
@@ -42,8 +42,8 @@ $ sudo rabbitmq-plugins enable rabbitmq_mqtt
 こちらも上記の記事に従って事前にユーザーを作っておくといいだろう。
 
 ```
-$ sudo rabbitmqctl add_user ゆーざーめい ぱすわーど
-$ sudo rabbitmqctl set_permissions ゆーざーめい “.*” “.*” “.*\"
+$ sudo rabbitmqctl add_user ゆーざーめい ぱすわーど  
+$ sudo rabbitmqctl set_permissions ゆーざーめい “.*” “.*” “.*\"  
 $ sudo rabbitmqctl set_user_tags ゆーざーめい administrator
 ```
 
@@ -61,20 +61,20 @@ $ go get git.eclipse.org/gitroot/paho/org.eclipse.paho.mqtt.golang.git
 
 ##サンプルコード
 
-\r\n\r\nとりあえず環境が整ったようなのでサンプルコードを。    
+とりあえず環境が整ったようなのでサンプルコードを。    
 眺める限りシンプルなサンプルとしては
 みんな似たようなコードが出回っているので特別参考にはならないと思う。
 
 ###送る側
 
 Publisher とか言うらしい。
-<script src=\"https://gist.github.com/glassesfactory/1a09a2caf8c92015f306.js\">{}</script>
+<script src="https://gist.github.com/glassesfactory/1a09a2caf8c92015f306.js">{}</script>
 
 ###受ける側
 
 Subscriber とか言うらしい。
 
-<script src=\"https://gist.github.com/glassesfactory/b25dbe1c5f06a3992284.js\">{}</script>
+<script src="https://gist.github.com/glassesfactory/b25dbe1c5f06a3992284.js">{}</script>
 
 なんでかクライアントIDをセットしていないサンプルが多かった。  
 冷静に考えると当たり前っちゃ当たり前なので、余り触れられていないが  
