--- a/entry/44.md
+++ b/entry/44.md
@@ -68,13 +68,13 @@ $ go get git.eclipse.org/gitroot/paho/org.eclipse.paho.mqtt.golang.git
 ###送る側
 
 Publisher とか言うらしい。
-<script src="https://gist.github.com/glassesfactory/1a09a2caf8c92015f306.js">{}</script>
+<script src="https://gist.github.com/glassesfactory/1a09a2caf8c92015f306.js"></script>
 
 ###受ける側
 
 Subscriber とか言うらしい。
 
-<script src="https://gist.github.com/glassesfactory/b25dbe1c5f06a3992284.js">{}</script>
+<script src="https://gist.github.com/glassesfactory/b25dbe1c5f06a3992284.js"></script>
 
 なんでかクライアントIDをセットしていないサンプルが多かった。  
 冷静に考えると当たり前っちゃ当たり前なので、余り触れられていないが  
