--- a/entry/42.md
+++ b/entry/42.md
@@ -5,7 +5,7 @@
 
 なぜ golang なのか? という話も書こうとしたけど背景とか含めて書かないと多分伝わらないし   何にせよ長くなるのでまた機会とやる気があったら書くと思う。
 
-めんどくさいので
+~~めんどくさいので~~
 
 楽しそうなので golang 始めてみました〜
 と書いておく。言語初める動機なんてそれで十分だろ。
@@ -14,6 +14,7 @@
 
 - slug: 42
 - date: 2014-11-4 10:00
+- tags: golang
 - active: true
 
 ## content
