なんか markdown parser がしんだ

--- a/entry/41.md
+++ b/entry/41.md
@@ -45,20 +45,20 @@ grunt では以下のような構成と Gruntfile を用意していた。
 ### ディレクトリ
 
 ```
-    ├/Gruntfile.coffee
-    ├/package.json└/src  
-    ├/coffee  
-    ├/jade  
-    └/stylus
+├/Gruntfile.coffee
+├/package.json└/src  
+├/coffee  
+├/jade  
+└/stylus
 ```
 
-###package.json
+### package.json
 
-<script src="https://gist.github.com/glassesfactory/cf4e9649c2a215baa13c.js">{}</script>
+<script src="https://gist.github.com/glassesfactory/cf4e9649c2a215baa13c.js"></script>
 
 ###Gruntfile.coffee
 
-<script src="https://gist.github.com/glassesfactory/8a28c4bd7352349dece6.js">{}</script>
+<script src="https://gist.github.com/glassesfactory/8a28c4bd7352349dece6.js"></script>
 
 案件で使ってたやつから無理やり引剥がしてきたのでコピペで動くかは知らない。  
 だいたいこんなふうになってるよねというイメージということで。
@@ -68,29 +68,29 @@ grunt では以下のような構成と Gruntfile を用意していた。
 ###ディレクトリ
 
 ```
-    ├/gulpfile.coffee
-    ├/gulpconf.cson
-    ├/package.json
-    └/gulp  
-    ├/conf.coffee  
-    ├/env.coffee  
-    └/tasks    
-    ├/色々タスク.coffee
+├/gulpfile.coffee
+├/gulpconf.cson
+├/package.json
+└/gulp  
+├/conf.coffee  
+├/env.coffee  
+└/tasks    
+├/色々タスク.coffee
 ```
 
-###package.json
+### package.json
 
-<script src="https://gist.github.com/glassesfactory/bd05f40f104e5c7ea363.js">{}</script>
+<script src="https://gist.github.com/glassesfactory/bd05f40f104e5c7ea363.js"></script>
 
 
-###gulpfile.coffee
+### gulpfile.coffee
 
-<script src="https://gist.github.com/glassesfactory/52a426c70d45a4e46e4d.js">{}</script>
+<script src="https://gist.github.com/glassesfactory/52a426c70d45a4e46e4d.js"></script>
 
 タスクごとにファイルを分けられるのがよい。
 全部書ききるのは大変なので coffee のコンパイルと依存性の解決、結合までやってる browserify タスクを晒してみる。
 
-<script src="https://gist.github.com/glassesfactory/4802419699fb2be1467d.js">{}</script>
+<script src="https://gist.github.com/glassesfactory/4802419699fb2be1467d.js"></script>
 
 gulp-browserify というタスクは存在するのだけれど、ブラックリスト入しているというか
 生で使えよという話になっているので自分で定義。
